Bug 1255214 - Only repaint GTK scrollbar button if its enablement actually changed. r=mstange

MozReview-Commit-ID: ITLeksQzvVM